--- a/src/i18n/translations/pt.json
+++ b/src/i18n/translations/pt.json
@@ -5,5 +5,6 @@
   "finished": "Finalizado",
   "addList": "Adicionar à {{list}}",
   "hoursPlayed": "Horas jogadas",
-  "searchError":"Erro ao buscar jogos"
+  "searchError":"Erro ao buscar jogos",
+  "searchScreenTitle": "Resultados da Busca"
 }
