--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -6,5 +6,10 @@
   "addList": "Add to {{list}}",
   "hoursPlayed": "Hours played",
   "searchError":"Error fetching games",
-  "searchScreenTitle": "Search Results"
+  "searchScreenTitle": "Search Results",
+  "hoursPlayedAlertSubtitle": "Enter hours played",
+  "hoursPlayedAlertTitle": "Add Hours Played",
+  "releaseDate": "Release Date:",
+  "rating": "Rating:",
+  "hoursModalInputPlaceholder":"e.g. 10"
 }
